[gd_scene load_steps=5 format=3 uid="uid://kqmwkgye0ggl"]

[ext_resource type="Script" path="res://scenes/skills/gadgets/explosive_granade/explosive_grenade.gd" id="1_fuk3f"]
[ext_resource type="PackedScene" uid="uid://cxmxiuemn8110" path="res://scenes/skills/gadgets/explosive_granade/grenade_explosion.tscn" id="2_547me"]
[ext_resource type="Script" path="res://scenes/skills/gadgets/explosive_granade/explosive_grenade_movement.gd" id="2_mh5bn"]
[ext_resource type="Texture2D" uid="uid://cywbcfbffh34d" path="res://assets/Monochrome/Tiles/tile_0086.png" id="3_imdr6"]

[node name="ExplosiveGrenade" type="Node2D"]
top_level = true
y_sort_enabled = true
script = ExtResource("1_fuk3f")
grenade_explosion = ExtResource("2_547me")

[node name="Node2D" type="Node2D" parent="."]
top_level = true
y_sort_enabled = true
script = ExtResource("2_mh5bn")

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture_filter = 1
texture = ExtResource("3_imdr6")

[node name="ExplosionDelay" type="Timer" parent="Node2D"]

[connection signal="grenade_exploded" from="Node2D" to="." method="on_grenade_exploded"]
[connection signal="timeout" from="Node2D/ExplosionDelay" to="Node2D" method="_on_explosion_delay_timeout"]
